src/main/resources/cpp/tests/neg/N05_assign_to_rvalue.cpp
int main() {
    int x = 1;
    5 = x; // Fehler: linke Seite keine lvalue

    return 0;
}
